--- a/src/index.css
+++ b/src/index.css
@@ -2212,7 +2212,7 @@ div[role=dialog] button#outlined-success {
     text-align: center;
 }
 .login-logo img {
-    height: 50px;
+    height: 70px;
 }
 .login-title{
     text-align: center;
@@ -2601,6 +2601,8 @@ table .action{
 .row-detail-info{
     /*width: 100%;*/
     /*width: 100%;*/
+    flex-grow: 1;
+    flex-basis: 0;
     font-weight: 500;
 }
 .p-accordion .p-accordion-tab {
